<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#ffffff"
    android:orientation="vertical"
    tools:context=".MainActivity" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_gravity="top"
        android:layout_weight="0.1"
        android:layout_marginBottom="20dp"
        android:background="#00000000"
        android:orientation="horizontal" >
        <Button
            android:id="@+id/btn_back"
            android:layout_width="60dp"
            android:layout_height="40dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/back" />
    </LinearLayout>

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="#0aa000b0"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/txt_text"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="#0f000000"
                android:textColor="#000000" />
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginTop="10dp"
        android:background="#0f000000"
        android:orientation="horizontal" >

        <EditText
            android:id="@+id/edt_msg"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.7"
            android:hint="@string/sendmsg"
            android:singleLine="false"
            android:text="@string/sayhello"
            android:textColor="#000000" />

        <Button
            android:id="@+id/btn_send"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight="0.3"
            android:text="@string/send" />
    </LinearLayout>

</LinearLayout>